Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <p style="margin-bottom: 30px; color: #aaa;">Connect with me on:</p>
                 
                 <div class="social-links">
-                    <a href="mailto:r8torit@gmail.com" class="social-btn"><i class="fas fa-envelope"></i></a>
+                    <a href="mailto:r8toritam@gmail.com" class="social-btn"><i class="fas fa-envelope"></i></a>
                     <a href="https://linkedin.com/in/ritam-d" target="_blank" class="social-btn"><i class="fab fa-linkedin-in"></i></a>
                     <a href="https://instagram.com/ritam_d3y" target="_blank" class="social-btn"><i class="fab fa-instagram"></i></a>
                     <a href="https://github.com/RiT-EoN" target="_blank" class="social-btn"><i class="fab fa-github"></i></a>
@@ -113,3 +113,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
