Refactor index.html for improved structure
Updated the HTML structure and content for clarity and consistency.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                 <div class="skill-card glass-card fade-up">
                     <i class="fas fa-spinner fa-spin skill-icon"></i>
-                    <h3>Loading...</h3>
+                    <h3>Learning...</h3>
                 </div>
 
             </div>
@@ -113,5 +113,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
