Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                 <div class="skill-card glass-card fade-up">
                     <i class="fas fa-spinner fa-spin skill-icon"></i>
-                    <h3>Learning...</h3>
+                    <h3>learning...</h3>
                 </div>
 
             </div>
@@ -113,6 +113,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
